--- a/src/search/index.html
+++ b/src/search/index.html
@@ -8,5 +8,13 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- <script
+      type="text/javascript"
+      src="https://unpkg.com/react@18/umd/react.production.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
+    ></script> -->
   </body>
 </html>
