--- a/src/search/index.html
+++ b/src/search/index.html
@@ -7,14 +7,9 @@
     <title>Search Page</title>
   </head>
   <body>
-    <div id="root"></div>
-    <!-- <script
-      type="text/javascript"
-      src="https://unpkg.com/react@18/umd/react.production.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
-    ></script> -->
+    <div id="root">
+      <!-- HTML_PLACEHOLDER -->
+      <!-- INIRIAL_DATA_PLACEHOLDER -->
+    </div>
   </body>
 </html>
