--- a/src/index/index.html
+++ b/src/index/index.html
@@ -7,6 +7,6 @@
     <title>Index Page</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">adadadsdad</div>
   </body>
 </html>
